  (CVE-2014-3488) (Michael Han via phunt)

  ZOOKEEPER-2405: getTGT() in Login.java mishandles confidential
  information (Michael Han via phunt)

  ZOOKEEPER-2137: Make testPortChange() less flaky
  (Michael Han via phunt)

  ZOOKEEPER-2297: NPE is thrown while creating "key manager" and "trust manager"
  (Arshad Mohammad via fpj)

IMPROVEMENTS:

  ZOOKEEPER-2270: Allow MBeanRegistry to be overridden for better unit tests
  (Jordan Zimmerman via rgs)

  ZOOKEEPER-2040: Server to log underlying cause of SASL connection problems.
  (Steve Loughran via cnauroth)

  ZOOKEEPER-2315: Change client connect zk service timeout log level from Info
  to Warn level (Lin Yiqun via rgs)

  ZOOKEEPER-2240: Make the three-node minimum more explicit in documentation
  and on website (Shawn Heisey via rgs)

  ZOOKEEPER-2326: Include connected server address:port in log
  (Arshad Mohammad via rgs)

  ZOOKEEPER-2306: Remove file delete duplicate code from test code
  (Arshad Mohammad via rgs)

  ZOOKEEPER-2300: Expose SecureClientPort and SecureClientAddress JMX properties
  (Arshad Mohammad via rgs)

  ZOOKEEPER-2240 Make the three-node minimum more explicit in 
  documentation and on website (Shawn Heisey and Arshad Mohammad via phunt)
 
  ZOOKEEPER-2139: Support multiple ZooKeeper client with different configurations
  in a single JVM (Arshad Mohammad via fpj)

  ZOOKEEPER-2402: Document client side properties (Arshad Mohammad via fpj)

  ZOOKEEPER-2410: add time unit to 'ELECTION TOOK' log.info message
  (Christine Poerschke via phunt)

  ZOOKEEPER-2433: ZooKeeperSaslServer: allow user principals in
  subject (Andy B via phunt)

Release 3.5.1 - 07/27/2015

NEW FEATURES:
  ZOOKEEPER-2069 Netty Support for ClientCnxnSocket (Hongchao via fpj)

  ZOOKEEPER-2119 Netty client docs (Hongchao via rakeshr)

  ZOOKEEPER-2125 SSL on Netty client-server communication (Hongchao, Ian Dimayuga via rakeshr)

  ZOOKEEPER-2123 Provide implementation of X509 AuthenticationProvider