@@ -162,6 +162,9 @@ BUGFIXES:
   ZOOKEEPER-2297: NPE is thrown while creating "key manager" and "trust manager"
   (Arshad Mohammad via fpj)
 
+  ZOOKEEPER-2380: Deadlock between leader shutdown and forwarding ACK to the
+  leader (Arshad Mohammad via cnauroth)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-2270: Allow MBeanRegistry to be overridden for better unit tests
